<resources>
    <string name="ecm_type">ECM Type:</string>
    <string name="app_name">EcmDroid</string>
    <string name="protocol">Protocol</string>
    <string name="choose_protocol">Choose Protocol</string>
    <string name="active_tests">Active Tests</string>
    <string name="tps_reset">TPS Reset</string>
    <string name="run_device_test">Choose Device Test</string>
    <string name="start">Start</string>
    <string name="data_channels">Data Channels</string>
    <string name="eeprom_pages">EEPROM Pages:</string>
    <string name="connect">Connect</string>
    <string name="logfile">Log file:</string>
    <string name="logStatus">Status:</string>
    <string name="tps">TPS:</string>
    <string name="rpm">RPM:</string>
    <string name="clt">CLT:</string>
    <string name="ecm_country_id">Country ID:</string>
    <string name="ecm_calibration">Calibration:</string>
    <string name="ecm_layout_revision">Layout Rev:</string>
    <string name="start_recording">Start Recording</string>
    <string name="status_idle">Idle</string>
    <string name="current_errors">Current Errors</string>
    <string name="stored_errors">Stored Errors</string>
    <string name="read_errors">Read Errors</string>
    <string name="clear_errors">Clear Errors</string>
    <string name="trouble_codes">Trouble Codes</string>
    <string name="eeprom_size">EEPROM Size:</string>
    <string name="tps_reset_notice">Please follow the Service Manual for performing a TPS reset on DDFI3 ECMs.</string>
    <string name="tps_reset_instructions">Back out idle adjuster. Open and snap shut throttle control grip 2–3 times. Ensure that throttle plate is completely closed ("sticks" in throttle body). Press the "OK" button. Open the throttle for 5–6° and set idle to 1050–1100 rpm.</string>
    <string name="none">[none]</string>
    <string name="stop_recording">Stop recording</string>
    <string name="log_status" formatted="false">Recording… (%d records, %d KB)</string>
    <string name="disconnect">Disconnect</string>
    <string name="connected">CONNECTED</string>
    <string name="bluetooth_is_not_available">Bluetooth is not available</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="logfile_closed">Logfile closed.</string>
    <string name="no_ext_storage">External storage not available.</string>
    <string name="dash">-</string>
    <string name="fetching_trouble_codes">Fetching Trouble Codes…</string>
    <string name="no_errors">No Errors</string>
    <string name="clearing_trouble_codes">Clearing Trouble Codes…</string>
    <string name="clear_all_errors">OK to permanently clear all errors?</string>
    <string name="recording_started">Recording ECM data</string>
    <string name="info">Info</string>
    <string name="view_data">View Data</string>
    <string name="log">Log</string>
    <string name="eeprom_db">EEPROM DB</string>
    <string name="log_interval">Log Interval:</string>
    <string name="main">EcmDroid</string>
    <string name="log_recorder">Log Recorder</string>
    <string name="ecm_id">ECM ID:</string>
    <string name="ecm_serial_no">ECM Serial No.:</string>
    <string name="ecm_mfg_date">ECM Mfg. Date:</string>
    <string name="choose_variable">Choose Variable</string>
    <string name="title_activity_eeprom">EEPROM Editor</string>
    <string name="eeprom">EEPROM</string>
    <string name="offset">Offset</string>
    <string name="byte_value">Byte Val</string>
    <string name="short_hi">16-Bit (Hi)</string>
    <string name="short_lo">16-Bit (Lo)</string>
    <string name="hex">Hex</string>
    <string name="dec">Dec</string>
    <string name="ecm_setup">ECM Setup</string>
    <string name="refreshing_setup_values">Preparing Setup Values…</string>
    <string name="air_temperature_sensor">Air Temperature Sensor</string>
    <string name="bank_angle_sensor">Bank Angle Sensor</string>
    <string name="baro_sensor">Baro Sensor</string>
    <string name="battery_voltage">Battery Voltage</string>
    <string name="o2_sensor_rear">O2 Sensor (Rear)</string>
    <string name="o2_sensor_front">O2 Sensor (Front)</string>
    <string name="sidestand_switch">Sidestand Switch</string>
    <string name="throttle_pos_sensor">Throttle Pos. Sensor</string>
    <string name="cooling_fan">Cooling Fan</string>
    <string name="exhaust_valve_actuator">Exhaust Valve Actuator</string>
    <string name="general_config">General Config</string>
    <string name="system">System</string>
    <string name="error_mask">Error Mask</string>
    <string name="noise_reduction">Noise Reduction</string>
    <string name="sensors">Sensors</string>
    <string name="actuators">Actuators</string>
    <string name="limits">Limits</string>
    <string name="fan_setup_key_off">Key Off</string>
    <string name="max_duration_min">Max Duration (min)</string>
    <string name="min_batt_voltg">Min Batt. Voltg.</string>
    <string name="fan_setup_key_on">Key On</string>
    <string name="on_temperature">On Temp (°C)</string>
    <string name="off_temperature">Off Temp (°C)</string>
    <string name="afv_settings">AFV Settings</string>
    <string name="afv_rear">AFV (Rear)</string>
    <string name="afv_front">AFV (Front)</string>
    <string name="exhaust_config">Exhaust Config</string>
    <string name="exhaust_valve_enabled">Exhaust valve enabled</string>
    <string name="keep_open_when_not_in_wot">Keep open when not in WOT</string>
    <string name="cycle_valve_at_ignition_on">Cycle valve at ignition-on</string>
    <string name="close_valve_on_amc_error">Close Valve on AMC error</string>
    <string name="fan_setup">Fan Setup</string>
    <string name="rpm_limits">RPM Limits</string>
    <string name="temp_limits">Temperature Limits</string>
    <string name="preferences">Preferences</string>
    <string name="prefs_conn_type">connection_type</string>
    <string name="prefs_bt_connection">BT</string>
    <string name="prefs_tcp_connection">TCP</string>
    <string name="setup">Setup</string>
    <string name="about">About</string>
    <string name="fixed">Fixed</string>
    <string name="soft_limit_trigger">Soft Limit Trigger</string>
    <string name="soft_limit_reset">Soft Limit Reset</string>
    <string name="hard_limit_trigger">Hard Limit Trigger</string>
    <string name="hard_limit_reset">Hard Limit Reset</string>
    <string name="kill_limit_trigger">Kill Limit Trigger</string>
    <string name="kill_limit_reset">Kill Limit Reset</string>
    <string name="cold_engine">Cold Engine</string>
    <string name="cold_engine_temp">Cold Engine Temp (°C)</string>
    <string name="soft_limit_trigger_c">Soft Limit Trigger (°C)</string>
    <string name="soft_limit_reset_c">Soft Limit Reset (°C)</string>
    <string name="hard_limit_trigger_c">Hard Limit Trigger (°C)</string>
    <string name="hard_limit_reset_c">Hard Limit Reset (°C)</string>
    <string name="kill_limit_trigger_c">Kill Limit Trigger (°C)</string>
    <string name="kill_limit_reset_c">Kill Limit Reset (°C)</string>
    <string name="engine_light_flashing_on_c">Engine Light Flashing On (°C)</string>
    <string name="engine_light_flashing_off_c">Engine Light Flashing Off (°C)</string>
    <string name="speed_based_fan_control">Speed-based Fan Control</string>
    <string name="conditions">Conditions</string>
    <string name="soft_limit_min_load">Soft Limit Min. Load</string>
    <string name="hard_limit_min_load">Hard Limit Min. Load</string>
    <string name="soft_limit_min_rpm">Soft Limit Min. RPM</string>
    <string name="hard_limit_min_rpm">Hard Limit Min. RPM</string>
    <string name="ignore_rpm_trigger_c">Ignore RPM Trigger (°C)</string>
    <string name="ignore_rpm_reset_c">Ignore RPM Reset (°C)</string>
    <string name="o2_setup">O2 Setup</string>
    <string name="o2_sensor">O2 Sensor</string>
    <string name="rich_v_">Rich (V)</string>
    <string name="rich_v">Rich (V)</string>
    <string name="lean_v">Lean (V)</string>
    <string name="minimum_rpm">Minimum RPM</string>
    <string name="min_load_8bit">Min. Load (8bit)</string>
    <string name="activation_delay_s">Activation Delay (s)</string>
    <string name="deactivation_delay_s">Deactivation Delay (s)</string>
    <string name="closed_loop_configuration">Closed Loop Configuration</string>
    <string name="ego_correction_settings">EGO Correction Settings</string>
    <string name="max_ego_corr_pct">Max. EGO Corr. (%)</string>
    <string name="min_ego_corr_pct">Min. EGO Corr. (%)</string>
    <string name="max_engine_temp_c">Max. Engine Temp (°C)</string>
    <string name="min_engine_temp_c">Min. Engine Temp (°C)</string>
    <string name="max_cylinder_diff_pct">Max. Cylinder Diff. (%)</string>
    <string name="active_intake">Active Intake</string>
    <string name="suppress_accel_enrichment">Suppress Accel. Enrichment</string>
    <string name="eeprom_fetch">Fetch</string>
    <string name="eeprom_burn">Burn</string>
    <string name="save_eeprom">Save</string>
    <string name="load_eeprom">Load</string>
    <string name="cell_info">Info</string>
    <string name="reading_ecm_identification">Reading ECM Identification…</string>
    <string name="fetch_eeprom">Read EEPROM</string>
    <string name="burn_eeprom">Write EEPROM</string>
    <string name="overwrite_changes">You have unsaved changes to your EEPROM that will be lost when fetching.\n\nIs it OK to Continue?</string>
    <string name="fetch_progress">Reading Page %1$d of %2$d…</string>
    <string name="burn_warning">Warning: Burning the EEPROM might impair your vehicle.\n\nAre you sure to continue?</string>
    <string name="burn_progress">Writing page %1$d of %2$d…</string>
    <string name="burn_success">EEPROM burned successfully</string>
    <string name="midpoint_v">Midpoint (V)</string>
    <string name="engine_temp_sensor">Engine Temp. Sensor</string>
    <string name="neutral_indicator_switch">Neutral Indicator Switch</string>
    <string name="camshaft_position">Camshaft Position</string>
    <string name="clutch_switch">Clutch Switch</string>
    <string name="crankshaft_position">Crankshaft Position</string>
    <string name="fuel_pressure">Fuel Pressure</string>
    <string name="manifold_pressure">Manifold Pressure</string>
    <string name="velocity_sensor">Velocity Sensor</string>
    <string name="deceleration_fuel_cut">Deceleration Fuel Cut</string>
    <string name="idle_fuel_amp_ign_adjust">Idle Fuel &amp; Ign. Adjust.</string>
    <string name="on_accel_condition_only">On Accel. Condition Only</string>
    <string name="on_accel_and_wot_condition">On Accel. and WOT Condition</string>
    <string name="on_wot_condition_only">On WOT Condition Only</string>
    <string name="airbox_pressure_feature">Airbox Pressure Feature</string>
    <string name="log_avg_baro_abp_corr_data">Log Avg. Baro &amp; ABP Corr. Data</string>
    <string name="log_map_front_rear_data">Log MAP Front/Rear Data</string>
    <string name="read_baro_at_key_on">Read Baro at Key-On</string>
    <string name="read_sensor_continuously">Read Sensor Continuously</string>
    <string name="skip_key_on_read_if_engine_runs">Skip Key-On Read if Engine runs</string>
    <string name="speed_correction">Speed Correction</string>
    <string name="use_baro_not_map_sensor">Use Baro (not MAP) Sensor</string>
    <string name="airbox_pressure_sensor">Airbox Pressure Sensor</string>
    <string name="shifter">Shifter</string>
    <string name="shifter_feature">Shifter Feature</string>
    <string name="shifter_transition_required">Shifter Transition required</string>
    <string name="shifter_fuel_spark_cut">Shifter Fuel &amp; Spark Cut</string>
    <string name="shift_light_feature">Shift Light Feature</string>
    <string name="shift_light_output">Shift Light Output</string>
    <string name="log_front_ego_fuel_data">Log Front EGO &amp; Fuel Data</string>
    <string name="enable_closed_loop">Enable Closed Loop</string>
    <string name="torque_values">Torque Values</string>
</resources>