<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/logFileLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/logfile" />

    <TextView
        android:id="@+id/logFileValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/logFileLabel"
        android:layout_alignBaseline="@+id/logFileLabel"
        android:text="@string/none" />

    <TextView
        android:id="@+id/logStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logFileLabel"
        android:layout_alignLeft="@+id/logFileLabel"
        android:text="@string/logStatus" />

    <TextView
        android:id="@+id/logStatusValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/logFileValue"
        android:layout_alignBaseline="@+id/logStatusLabel"
        android:text="@string/status_idle" />

    <TextView
        android:id="@+id/tpsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/logStatusLabel"
        android:layout_below="@+id/logStatusLabel"
        android:layout_marginTop="20dp"
        android:text="@string/tps" />

    <TextView
        android:id="@+id/tpsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tpsLabel"
        android:layout_alignLeft="@+id/logStatusValue"
        android:text="@string/dash" />

    <TextView
        android:id="@+id/rpmLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tpsLabel"
        android:layout_alignLeft="@+id/tpsLabel"
        android:text="@string/rpm" />

    <TextView
        android:id="@+id/rpmValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rpmLabel"
        android:layout_alignLeft="@+id/tpsValue"
        android:text="@string/dash" />

    <TextView
        android:id="@+id/cltLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rpmLabel"
        android:layout_alignLeft="@+id/rpmLabel"
        android:text="@string/clt" />

    <TextView
        android:id="@+id/cltValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cltLabel"
        android:layout_alignLeft="@+id/rpmValue"
        android:text="@string/dash" />

    <TextView
        android:id="@+id/logIntervalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cltLabel"
        android:layout_below="@+id/cltLabel"
        android:layout_marginTop="20dp"
        android:text="@string/log_interval" />

    <Spinner
        android:id="@+id/logInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cltValue"
        android:prompt="@string/log_interval"
        android:layout_alignBaseline="@+id/logIntervalLabel" />

    <Button
        android:id="@+id/recordButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/logFileLabel"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/start_recording" />

</RelativeLayout>
