<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/current_errors" />

    <EditText
        android:id="@+id/currentErrors"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:gravity="top"
        android:background="@drawable/roundedrectangle"
        android:textColor="#000"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:inputType="textMultiLine|textNoSuggestions"
        android:focusable="false"
        android:cursorVisible="false"
        android:textSize="6pt"
        android:scrollHorizontally="true"
        android:typeface="monospace" >

    </EditText>

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/stored_errors" />

    <EditText
        android:id="@+id/storedErrors"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/roundedrectangle"
        android:textColor="#000"
        android:gravity="top"
        android:cursorVisible="false"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:inputType="textMultiLine|textNoSuggestions"
        android:focusable="false"
        android:textSize="6pt"
        android:scrollHorizontally="true"
        android:typeface="monospace" >
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >

    <Button
        android:id="@+id/readErrors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/read_errors" />

    <Button
        android:id="@+id/clearErrors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/clear_errors" />

    </LinearLayout>


</LinearLayout>
